--- a/PyWebApp/templates/base.html
+++ b/PyWebApp/templates/base.html
@@ -59,12 +59,16 @@
                         {% endif %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
-                                Perfil
+                                Cuenta
                             </a>
+{#                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">#}
+{#                                Perfil#}
+{#                            </a>#}
                             <div class="dropdown-menu dropdown-menu-lg-right"
                                  style="padding: 15px; padding-bottom: 10px;">
-                                <a class="dropdown-item" href="#">Ver perfil</a>
-                                <a class="dropdown-item" href="#">Editar perfil</a>
+{#                                <a class="dropdown-item" href="#">Ver perfil</a>#}
+{#                                <a class="dropdown-item" href="#">Editar perfil</a>#}
+                                <a class="dropdown-item" href="#">Configuración</a>
                                 <a class="dropdown-item"
                                    onclick="document.cookie = 'LoginID=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';"
                                    href="/">Cerrar sección</a>
