--- a/PyWebApp/templates/base.html
+++ b/PyWebApp/templates/base.html
@@ -57,6 +57,11 @@
                                 <a class="nav-link" href="/panel/admin">Panel Administrativo</a>
                             </li>
                         {% endif %}
+                        {% if vendedor %}
+                            <li class="nav-item dropdown">
+                                <a class="nav-link" href="/panel/venta">Panel de ventas</a>
+                            </li>
+                        {% endif %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
                                 Cuenta
