--- a/PyWebApp/templates/basePanel.html
+++ b/PyWebApp/templates/basePanel.html
@@ -21,11 +21,9 @@
 <div id="page-container" style="padding-bottom: 0">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-            {% if adminPanel %}
-                <a class="navbar-brand" href="/panel/admin"><h1>{{ Empresa.Nombre }}</h1></a>
-            {% else %}
-                <a class="navbar-brand" href="/panel/venta"><h1>{{ Empresa.Nombre }}</h1></a>
-            {% endif %}
+            <a class="navbar-brand" href=
+                    {% if adminPanel %}"/panel/admin"{% else %}"/panel/venta"{% endif %}>
+            <h1>{{ Empresa.Nombre }}</h1></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,7 +33,12 @@
                 <ul class="navbar-nav">
                     {% if adminPanel %}
                         <li class="nav-item dropdown">
-                            <a class="nav-link" href="/panel/admin/vehiculo">Vehículos</a>
+                            <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
+                                Vehículos
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="/panel/admin/vehiculo">Marcas/Modelos</a>
+                            </div>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown">
@@ -56,6 +59,8 @@
                                 <a class="dropdown-item" href="/panel/admin/usuarios/registrar">Registrar</a>
                             </div>
                         </li>
+                    {% else %}
+
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav ml-auto">
