--- a/PyWebApp/templates/registrarVehiculo.html
+++ b/PyWebApp/templates/registrarVehiculo.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="ciudad" class="col-sm-2 col-form-label">Modelo:</label>
+                    <label for="ciudad" class="col-sm-2 col-form-label">Ciudad:</label>
                     <div class="col-sm-10">
                         <select name="ciudad" class="form-control selectpicker" title="Ninguno" id="ciudad"
                                 data-live-search="true">
@@ -89,12 +89,12 @@
                         for (i = 0; i < j; i++) {
                             if (i == 0)
                                 value = result['data'][i][0];
-                            target.append('<option val="' + result['data'][i][0] + '">' + result['data'][i][3] + '</option>');
+                            console.log(result['data'][i])
+                            target.append('<option value="' + result['data'][i][0] + '">' + result['data'][i][3] + ' (' + result['data'][i][4] + ')</option>');
                         }
-                        if(value!=null) {
-                            target.val(value);
-                        }
+
                         target.selectpicker('refresh');
+                        target.selectpicker('val', value);
                     }
                 },
                 error: function () {
@@ -113,6 +113,13 @@
                 data: {
                     csrfmiddlewaretoken: "{{ csrf_token }}",   // < here
                     state: "inactive",
+                    marca: $('#marca').val(),
+                    modelo: $('#modelo').val(),
+                    estado: $('#estado').val(),
+                    precio: $('#precio').val(),
+                    desc: $('#desc').val(),
+                    ciudad: $('#ciudad').val()
+
                 },
                 success: function (result) {
                     //location.href = "/panel/admin/empresa";
