--- a/PyWebApp/templates/basePanel.html
+++ b/PyWebApp/templates/basePanel.html
@@ -39,6 +39,7 @@
                             </a>
                             <div class="dropdown-menu">
                                 <a class="dropdown-item" href="/panel/admin/vehiculo/aprobar">Aprobar</a>
+                                <a class="dropdown-item" href="/panel/admin/vehiculo/anuncio">Anunciar</a>
                                 <a class="dropdown-item" href="/panel/admin/vehiculo/marcaYmodelo">Marcas/Modelos</a>
                             </div>
                         </li>
