--- a/PyWebApp/templates/ventaVentas.html
+++ b/PyWebApp/templates/ventaVentas.html
@@ -1,8 +1,200 @@
 {% extends 'basePanel.html' %}
+{% block extrahead %}
+    {% load static %}
+    <script src="{% static "/js/searchCondition.js" %}"></script>
+{% endblock %}
 {% block content %}
     <div class="container-fluid">
         <h1>Ventas</h1>
         <div class="dropdown-divider"></div>
-
+        <div class="row">
+            <nav class="border-right col-lg-3 col-md-12">
+                <div class="form-group row">
+                    <label for="estado" class="col-sm-2 col-form-label">Estado:</label>
+                    <div class="col-sm-10">
+                        <select name="estado" class="form-control selectpicker" id="estado">
+                            <option value="all">Nuevo/Usado</option>
+                            <option value="1">Nuevo</option>
+                            <option value="0">Usado</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="marca" class="col-sm-2 col-form-label">Marca:</label>
+                    <div class="col-sm-10">
+                        <select name="marca" class="form-control selectpicker" title="Todos" multiple id="marca"
+                                data-live-search="true">
+                            {% for marca in marcas %}
+                                <option value="{{ marca.0 }}">{{ marca.1 }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="modelo" class="col-sm-2 col-form-label">Modelo:</label>
+                    <div class="col-sm-10">
+                        <select name="modelo" class="form-control selectpicker" title="Todos" multiple id="modelo"
+                                data-live-search="true">
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="tipo" class="col-sm-2 col-form-label">Tipo:</label>
+                    <div class="col-sm-10">
+                        <select name="tipo" class="form-control selectpicker" title="Todos" id="tipo"
+                                data-live-search="true">
+                            <option value="all" selected>Todos</option>
+                            {% for tipo in tipos %}
+                                <option value="{{ tipo.0 }}">{{ tipo.1 }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row mt-3">
+                    <label for="priceA" class="col-sm-2 col-form-label">Precio:</label>
+                    <div class="col-sm-10">
+                        <div class="row">
+                            <div class="col-sm-5">
+                                <input name="price" min="0" value="0" class="form-control selectpicker" id="priceA"
+                                       type="number">
+                            </div>
+                            <label for="priceB" class="col-sm-2 col-form-label">hasta</label>
+                            <div class="col-sm-5">
+                                <input name="price" min="0" value="0" class="form-control selectpicker" id="priceB"
+                                       type="number">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="lugar" class="col-sm-2 col-form-label">Ciudad:</label>
+                    <div class="col-sm-10">
+                        <select name="lugar" class="form-control selectpicker" multiple id="lugar"
+                                title="Todas las ciudades" data-live-search="true">
+                            {#                            <option value="all">Todas las Provincias</option>#}
+                            {% for ciudad in ciudades %}
+                                <option value="{{ ciudad.0 }}">{{ ciudad.1 }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="dia" class="col-sm-2 col-form-label">Fecha:</label>
+                    <div class="col-sm-3">
+                        <select name="dia" class="form-control selectpicker" title="Todos" id="dia">
+                            <option selected>Todos</option>
+                            {% for dia in dias %}
+                                <option>{{ dia }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                    <div class="col-sm-4">
+                        <select name="mes" class="form-control selectpicker" title="Todos" id="mes">
+                            <option selected value="0">Todos</option>
+                            <option value="1">Enero</option>
+                            <option value="2">Febrero</option>
+                            <option value="3">Marzo</option>
+                            <option value="4">Abril</option>
+                            <option value="5">Mayo</option>
+                            <option value="6">Junio</option>
+                            <option value="7">Julio</option>
+                            <option value="8">Agosto</option>
+                            <option value="9">Septiembre</option>
+                            <option value="10">Octubre</option>
+                            <option value="11">Noviembre</option>
+                            <option value="12">Diciembre</option>
+                        </select>
+                    </div>
+                    <div class="col-sm-3">
+                        <select name="year" class="form-control selectpicker" title="Todos" id="year">
+                            <option selected>Todos</option>
+                            {% for year in years %}
+                                <option>{{ year }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <div class="col-sm-12">
+                        <button type="button" class="form-control btn-primary" onclick="buscar();">Buscar</button>
+                    </div>
+                </div>
+            </nav>
+            <div class="col-lg-9 col-md-12 overflow-auto">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">Fecha</th>
+                        <th scope="col">Ciudad</th>
+                        <th scope="col">Vendedor</th>
+                        <th scope="col">Cliente</th>
+                        <th scope="col">id Vehículo</th>
+                        <th scope="col">Marca</th>
+                        <th scope="col">Tipo</th>
+                        <th scope="col">Modelo</th>
+                        <th scope="col">Precio</th>
+                    </tr>
+                    </thead>
+                    <tbody id="contenido">
+                    {% for venta in ventas %}
+                        <tr>
+                            <td>{{ venta.5 }}</td>
+                            <td>{{ venta.16 }}</td>
+                            <td>{{ venta.3 }}</td>
+                            <td>{{ venta.2 }}</td>
+                            <td>{{ venta.4 }}</td>
+                            <td>{{ venta.8 }}</td>
+                            <td>{{ venta.19 }}</td>
+                            <td>{{ venta.10 }} ({{ venta.11 }})</td>
+                            <td>{{ venta.12 }}</td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
+    <script type="text/javascript">
+        function buscar() {
+            $.ajax({
+                type: "POST",
+                url: "/panel/venta/ver/fetch",
+                data: {
+                    csrfmiddlewaretoken: "{{ csrf_token }}",   // < here
+                    state: "inactive",
+                    estado: $('#estado').val(),
+                    marca: $('#marca').val(),
+                    modelo: $('#modelo').val(),
+                    priceA: $('#priceA').val(),
+                    priceB: $('#priceB').val(),
+                    ciudad: $('#lugar').val(),
+                    tipo: $('#tipo').val(),
+                    dia: $('#dia').val(),
+                    mes: $('#mes').val(),
+                    ano: $('#year').val()
+                },
+                success: function (result) {
+                    console.log(result)
+                    $('#contenido').empty();
+                    var j = result['data'].length;
+                    var i;
+                    for (i = 0; i < j; i++) {
+                        $('#contenido').append('<tr>');
+                        $('#contenido').append('<td>' + result['data'][i][5] + '</td>');
+                        $('#contenido').append('<td>' + result['data'][i][16] + '</td>');
+                        $('#contenido').append('<td>' + result['data'][i][3] + '</td>');
+                        $('#contenido').append('<td>' + result['data'][i][2] + '</td>');
+                        $('#contenido').append('<td>' + result['data'][i][4] + '</td>');
+                        $('#contenido').append('<td>' + result['data'][i][8] + '</td>');
+                        $('#contenido').append('<td>' + result['data'][i][19] + '</td>');
+                        $('#contenido').append('<td>' + result['data'][i][10] + '</td>');
+                        $('#contenido').append('<td>' + result['data'][i][12] + '</td>');
+                        $('#contenido').append('</tr>')
+                    }
+                },
+                error: function () {
+                }
+            })
+        }
+    </script>
 {% endblock %}
