--- a/PyWebApp/templates/base.html
+++ b/PyWebApp/templates/base.html
@@ -46,9 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/vende">Vende</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contacto">Contacto</a>
-                    </li>
+{#                    <li class="nav-item">#}
+{#                        <a class="nav-link" href="/contacto">Contacto</a>#}
+{#                    </li>#}
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     {% if logged %}
