--- a/PyWebApp/templates/catalog.html
+++ b/PyWebApp/templates/catalog.html
@@ -17,8 +17,8 @@
                     <div class="col-sm-10">
                         <select name="estado" class="form-control selectpicker" id="estado">
                             <option value="all">Nuevo/Usado</option>
-                            <option>Nuevo</option>
-                            <option>Usado</option>
+                            <option value="1">Nuevo</option>
+                            <option value="0">Usado</option>
                         </select>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                 {#                <div id="cantResult" class="d-inline font-weight-bold">MSG</div>#}
                 {#                resultados.#}
                 <div class="dropdown-divider"></div>
-                <div class="items card-columns">
+                <div id="items" class="card-columns">
                     {% for item in items %}
                         <div class="card" style="width: 18rem;">
                             <a href="/view/{{ item.1 }}">
